# gnuradio4

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
bench/: bm_rs_grv4_comparison.cpp  print
blocks/: CMakeLists.txt
blocks/basic/: CMakeLists.txt
blocks/basic/include/gnuradio-4.0/basic/: AwgnChannel.hpp  ChirpSource.hpp  Head.hpp  HeaderPayloadDemux.hpp  KeepMInN.hpp  Skip.hpp  StreamDemux.hpp  StreamMux.hpp  StreamTagger.hpp  StreamToVector.hpp  TagDebugSink.hpp  TagGate.hpp  Throttle.hpp  VectorToStream.hpp  WindowApply.hpp
blocks/basic/test/: CMakeLists.txt  qa_AwgnChannel.cpp  qa_ChirpSource.cpp  qa_Head.cpp  qa_HeaderPayloadDemux.cpp  qa_KeepMInN.cpp  qa_Skip.cpp  qa_StreamDemux.cpp  qa_StreamMux.cpp  qa_StreamTagger.cpp  qa_StreamToVector.cpp  qa_TagDebugSink.cpp  qa_TagGate.cpp  qa_Throttle.cpp  qa_WindowApply.cpp
blocks/coding/: CMakeLists.txt
blocks/coding/include/gnuradio-4.0/coding/: ConvEncoder.hpp  CrcCompute.hpp  DifferentialDecoder.hpp  DifferentialEncoder.hpp  GrayCodeDecoder.hpp  GrayCodeEncoder.hpp  PackBits.hpp  Scrambler.hpp  UnpackBits.hpp  ViterbiDecoder.hpp
blocks/coding/test/: CMakeLists.txt  qa_ConvEncoder.cpp  qa_CrcCompute.cpp  qa_DifferentialDecoder.cpp  qa_DifferentialEncoder.cpp  qa_GrayCodeDecoder.cpp  qa_GrayCodeEncoder.cpp  qa_PackBits.cpp  qa_Scrambler.cpp  qa_UnpackBits.cpp  qa_ViterbiDecoder.cpp
blocks/demod/: CMakeLists.txt
blocks/demod/include/gnuradio-4.0/demod/: ClockRecoveryMM.hpp  CostasLoop.hpp  PLL.hpp  SymbolSync.hpp
blocks/demod/test/: CMakeLists.txt  qa_ClockRecoveryMM.cpp  qa_CostasLoop.cpp  qa_PLL.cpp  qa_SymbolSync.cpp
blocks/electrical/: CMakeLists.txt
blocks/electrical/include/gnuradio-4.0/electrical/: GridFrequencyEstimator.hpp  HarmonicAnalyser.hpp  PhasorEstimator.hpp  TotalHarmonicDistortion.hpp
blocks/electrical/test/: CMakeLists.txt  qa_GridFrequencyEstimator.cpp  qa_HarmonicAnalyser.cpp  qa_PhasorEstimator.cpp  qa_TotalHarmonicDistortion.cpp
blocks/fileio/: CMakeLists.txt
blocks/fileio/include/gnuradio-4.0/fileio/: CsvFileSink.hpp  CsvFileSource.hpp  SigMFSink.hpp  SigMFSource.hpp  UdpSink.hpp  UdpSource.hpp  WavFileSink.hpp  WavFileSource.hpp
blocks/fileio/test/: CMakeLists.txt  qa_CsvFile.cpp  qa_SigMFFile.cpp  qa_UdpBlocks.cpp  qa_WavFile.cpp
blocks/filter/: CMakeLists.txt
blocks/filter/include/gnuradio-4.0/filter/: AdaptiveLmsFilter.hpp  BiquadFilter.hpp  CicFilter.hpp  Convolver.hpp  DCBlocker.hpp  FractionalDelayLine.hpp  HilbertTransform.hpp  KalmanFilter.hpp  MedianFilter.hpp  PolyphaseArbitraryResampler.hpp  RationalResampler.hpp  Squelch.hpp  SteadyStateKalman.hpp  SvdDenoiser.hpp  WienerFilter.hpp  time_domain_filter.hpp
blocks/filter/test/: CMakeLists.txt  qa_AdaptiveLmsFilter.cpp  qa_BiquadFilter.cpp  qa_CicFilter.cpp  qa_Convolver.cpp  qa_DCBlocker.cpp  qa_FractionalDelayLine.cpp  qa_HilbertTransform.cpp  qa_KalmanFilter.cpp  qa_MedianFilter.cpp  qa_PolyphaseArbitraryResampler.cpp  qa_RationalResampler.cpp  qa_Squelch.cpp  qa_SteadyStateKalman.cpp  qa_WienerFilter.cpp  qa_filter.cpp
blocks/fourier/: CMakeLists.txt
blocks/fourier/include/gnuradio-4.0/fourier/: PolyphaseChannelizer.hpp  SpectralEstimator.hpp  SpectralSubtractor.hpp  ifft.hpp
blocks/fourier/test/: CMakeLists.txt  qa_IFFT.cpp  qa_PolyphaseChannelizer.cpp  qa_SpectralEstimator.cpp  qa_SpectralSubtractor.cpp
blocks/math/: CMakeLists.txt
blocks/math/include/gnuradio-4.0/math/: Accumulator.hpp  AgcBlock.hpp  AmDemod.hpp  AutoCorrelation.hpp  Clamp.hpp  Conjugate.hpp  Correlation.hpp  DbConvert.hpp  Differentiator.hpp  EnergyDetector.hpp  Goertzel.hpp  Histogram.hpp  InstantaneousFrequency.hpp  Limiter.hpp  MovingAverage.hpp  MovingRms.hpp  PeakDetector.hpp  PhaseUnwrap.hpp  QuadratureDemod.hpp  SchmittTrigger.hpp  Threshold.hpp
blocks/math/test/: CMakeLists.txt  qa_Accumulator.cpp  qa_AgcBlock.cpp  qa_AmDemod.cpp  qa_AutoCorrelation.cpp  qa_Clamp.cpp  qa_Correlation.cpp  qa_DbConvert.cpp  qa_EnergyDetector.cpp  qa_Goertzel.cpp  qa_Histogram.cpp  qa_InstantaneousFrequency.cpp  qa_Limiter.cpp  qa_MathUtils.cpp  qa_MovingAverage.cpp  qa_MovingRms.cpp  qa_PeakDetector.cpp  qa_QuadratureDemod.cpp  qa_SchmittTriggerBlock.cpp  qa_Threshold.cpp
blocks/ofdm/: CMakeLists.txt
blocks/ofdm/include/gnuradio-4.0/ofdm/: CyclicPrefixAdd.hpp  CyclicPrefixRemove.hpp
blocks/ofdm/test/: CMakeLists.txt  qa_CyclicPrefixAdd.cpp  qa_CyclicPrefixRemove.cpp
docs/: BLOCK_CANDIDATES.md  BLOCK_INVENTORY.md
